Removing unnecesary prints